--- a/EDD_Proyecto1.vcxproj
+++ b/EDD_Proyecto1.vcxproj
@@ -147,14 +147,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\json_reader.cpp" />
+    <ClCompile Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\json_value.cpp" />
+    <ClCompile Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\json_writer.cpp" />
     <ClCompile Include="arbolavl.cpp" />
     <ClCompile Include="EDD_Proyecto1.cpp" />
     <ClCompile Include="Proyecto.cpp" />
+    <ClCompile Include="ReadJSON.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\allocator.h" />
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\assertions.h" />
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\config.h" />
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\forwards.h" />
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\json.h" />
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\json_features.h" />
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\json_tool.h" />
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\reader.h" />
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\value.h" />
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\version.h" />
+    <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\writer.h" />
     <ClInclude Include="Proyecto.h" />
     <ClInclude Include="ArbolAVL.h" />
     <ClInclude Include="NodoArbol.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\json_valueiterator.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
