--- a/EDD_Proyecto1.vcxproj
+++ b/EDD_Proyecto1.vcxproj
@@ -152,6 +152,8 @@
     <ClCompile Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\json_writer.cpp" />
     <ClCompile Include="arbolavl.cpp" />
     <ClCompile Include="EDD_Proyecto1.cpp" />
+    <ClCompile Include="ListaNivel.cpp" />
+    <ClCompile Include="ListaPared.cpp" />
     <ClCompile Include="Proyecto.cpp" />
     <ClCompile Include="ReadJSON.cpp" />
   </ItemGroup>
@@ -167,6 +169,10 @@
     <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\value.h" />
     <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\version.h" />
     <ClInclude Include="..\..\..\Downloads\jsoncpp-master\jsoncpp-master\include\json\writer.h" />
+    <ClInclude Include="ListaNivel.h" />
+    <ClInclude Include="ListaPared.h" />
+    <ClInclude Include="Nivel.h" />
+    <ClInclude Include="Pared.h" />
     <ClInclude Include="Proyecto.h" />
     <ClInclude Include="ArbolAVL.h" />
     <ClInclude Include="NodoArbol.h" />
